--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                   </div>
 
                   <div class="modal-body mx-4">
-                    <form class="" action="signedin.html" method="post">
+                    <form class="" action="/signedin.html" method="post">
                     <div class="md-form mb-5">
                       <input type="email" id="Form-email1" class="form-control validate">
                       <label data-error="wrong" data-success="right" for="Form-email1">Your email</label>
@@ -128,7 +128,7 @@
               </div>
 
               <div class="modal-body mx-4">
-                <form class="" action="signedin.html" method="post">
+                <form class="" action="/signedin.html" method="post">
                 <div class="md-form mb-5">
                   <input type="email" id="Form-email1" class="form-control validate">
                   <label data-error="wrong" data-success="right" for="Form-email1">Your email</label>
